--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install
         run: pip install -r requirements.txt
       - name: Tests
-        run: pytest tests
+        run: pytest tests/tests.py
       - name: Mypy
         run: mypy /src
       - name: Black
