--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -5,12 +5,15 @@ on:
   pull_request:
 
 jobs:
-  lint:
+  linters:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Install
+      - uses: actions/checkout@master
+      - uses: actions/setup-python@v1
+        with:
+          python-version: '3.12'
+          architecture: 'x64'
+      - name: Install requirements
         run: pip install -r requirements.txt
       - name: Tests
         run: pytest tests/tests.py
