--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Tests
-        run: pytest tests/tests.py
+        run: pytest tests/test.py
       - name: Mypy
         run: mypy /src
       - name: Black
