--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Tests
         run: pytest tests/test.py
       - name: Mypy
-        run: mypy /src
+        run: mypy src
       - name: Black
         run: black --diff --check src
       - name: Isort
